# fxed

./: .gitignore  .gitmodules  CMakeLists.txt  configure-Release.sh  configure.bat  configure.sh  gen_shader_registry.py  gen_vk_convert.py  main.cpp
.github/workflows/: ci.yml
include/: any_range.hpp  buffer_utils.hpp  dxc_include_handler.hpp  editor.hpp  file_tree.hpp  font.hpp  font_data.hpp  glfw_window.hpp  input.hpp  mesh.hpp  nri.hpp  nriFactory.hpp  packing.hpp  pane.hpp  ranges_join_with.hpp  resource_manager.hpp  shader_registry.hpp  static_vector.hpp  text_editor.hpp  text_rendering.hpp  timer.hpp  unicode.hpp  utf8_convert.hpp  utils.hpp  vk_convert.hpp  vk_my_raii.hpp  vk_nri.hpp
shadercache/: cursor_hlsl_PSMain.spv  cursor_hlsl_VSMain.spv  pane_hlsl_PSMain.spv  pane_hlsl_VSMain.spv  text_hlsl_PSMain.spv  text_hlsl_VSMain.spv  text_instanced_hlsl_PSMain.spv  text_instanced_hlsl_VSMain.spv
shaders/: cursor.hlsl  pane.hlsl  resource_heap.hlsl  text.hlsl  text_instanced.hlsl
src/: buffer_utils.cpp  editor.cpp  file_tree.cpp  font.cpp  glfw_window.cpp  input.cpp  mesh.cpp  nri.cpp  nriFactory.cpp  pane.cpp  text_editor.cpp  text_rendering.cpp  unicode.cpp  utils.cpp  vk_nri.cpp
